Closed
Bug 1643282
Opened 5 years ago
Closed 5 years ago
Broken build: Missing include in widget/gtk/MozContainerWayland.h
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla79
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox76 | --- | unaffected |
firefox77 | --- | unaffected |
firefox78 | --- | fixed |
firefox79 | --- | fixed |
People
(Reporter: msirringhaus, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
Same as bug 1626972: there is a missing #include <functional>
in widget/gtk/MozContainerWayland.h
which leads to a broken build ("function is not a member of std") with older gcc/clang.
Please also uplift to 78esr if possible.
Updated•5 years ago
|
Component: General → Widget: Gtk
Flags: needinfo?(stransky)
Product: Firefox Build System → Core
Regressed by: 1635362
Updated•5 years ago
|
Has Regression Range: --- → yes
Updated•5 years ago
|
status-firefox76:
--- → unaffected
status-firefox77:
--- → unaffected
status-firefox78:
--- → affected
status-firefox79:
--- → affected
status-firefox-esr68:
--- → unaffected
Keywords: regression
Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → stransky
Pushed by btara@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/eaa28af0db12
[Wayland] Include <functional> at MozContainerWayland.h, r=jhorak
Comment 4•5 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Comment 5•5 years ago
|
||
Martin, want to request uplift to 78 for the esr?
Flags: needinfo?(stransky)
Assignee | ||
Comment 6•5 years ago
|
||
Comment on attachment 9155193 [details]
Bug 1643282 [Wayland] Include <functional> at MozContainerWayland.h, r?jhorak
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Build failure with old gcc versions, ususaly used on ESR systems.
- User impact if declined: Firefox can't be build.
- Fix Landed on Version: 78
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Adds missing include file onle.
- String or UUID changes made by this patch: none
Flags: needinfo?(stransky)
Attachment #9155193 -
Flags: approval-mozilla-esr78?
Comment 7•5 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Flags: needinfo?(stransky)
Comment 8•5 years ago
|
||
Comment on attachment 9155193 [details]
Bug 1643282 [Wayland] Include <functional> at MozContainerWayland.h, r?jhorak
approved for 78.0b8
Flags: needinfo?(stransky)
Attachment #9155193 -
Flags: approval-mozilla-esr78? → approval-mozilla-beta+
Comment 9•5 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•