Bug 1643282 [Wayland] Include <functional> at MozContainerWayland.h, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D78854